Feedback message now showing at top of screen

--- a/frontend/app/less/paperwork-themes/paperwork-v1/paperwork-v1-custom.less
+++ b/frontend/app/less/paperwork-themes/paperwork-v1/paperwork-v1-custom.less
@@ -1168,6 +1168,7 @@ body.paperwork-error {
     position: fixed;
     text-align: center;
     width: 100%;
+    top: 0px;
     z-index: 9999;
     display: none;
 
